src/parser/ChronoParser.py
# Generated from src/parser/ChronoParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ChronoParser ( Parser ):

    grammarFileName = "ChronoParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'import'", "'func'", "'var'", "'const'", 
                     "'return'", "'class'", "'implement'", "'struct'", "'enum'", 
                     "'init'", "'deinit'", "'this'", "'static'", "'if'", 
                     "'else'", "'while'", "'for'", "'public'", "'interface'", 
                     "'with'", "'virtual'", "'override'", "'as'", "'using'", 
                     "'namespace'", "'endnamespace'", "'extern'", "'switch'", 
                     "'case'", "'default'", "'type'", "'unique'", "'shared'", 
                     "'weak'", "'@make'", "'@make_shared'", "'@move'", "'@unsafe_move'", 
                     "'static_cast'", "'reinterpret_cast'", "'const_cast'", 
                     "<INVALID>", "'new'", "'delete'", "'@cpp'", "'=='", 
                     "'!='", "'<='", "'>='", "'::'", "'->'", "'&&'", "'||'", 
                     "'<<'", "'>>'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'+='", "'-='", "'*='", "'/='", "'%='", "'<'", "'>'", 
                     "'!'", "'&'", "'|'", "'^'", "'~'", "';'", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "':'", "'='", "'.'", "','", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'@end'" ]

    symbolicNames = [ "<INVALID>", "IMPORT", "FUNC", "VAR", "CONST", "RETURN", 
                      "CLASS", "IMPLEMENT", "STRUCT", "ENUM", "INIT", "DEINIT", 
                      "THIS", "STATIC", "IF", "ELSE", "WHILE", "FOR", "PUBLIC", 
                      "INTERFACE", "IMPL", "VIRTUAL", "OVERRIDE", "AS", 
                      "USING", "NAMESPACE", "END_NAMESPACE", "EXTERN", "SWITCH", 
                      "CASE", "DEFAULT", "TYPE", "UNIQUE_KW", "SHARED_KW", 
                      "WEAK_KW", "AT_MAKE_UNIQUE", "AT_MAKE_SHARED", "AT_MOVE", 
                      "AT_UNSAFE_MOVE", "STATIC_CAST", "REINTERPRET_CAST", 
                      "CONST_CAST", "BOOL_LITERAL", "NEW", "DELETE", "AT_CPP", 
                      "EQ", "NEQ", "LTE", "GTE", "COLON_COLON", "ARROW", 
                      "AND_OP", "OR_OP", "LSHIFT", "RSHIFT", "PLUS", "MINUS", 
                      "STAR", "SLASH", "MODULO", "PLUS_ASSIGN", "MINUS_ASSIGN", 
                      "STAR_ASSIGN", "SLASH_ASSIGN", "MOD_ASSIGN", "LT", 
                      "GT", "NOT_OP", "BIT_AND", "BIT_OR", "BIT_XOR", "BIT_NOT", 
                      "SEMIC_TOKEN", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "LBRACK", "RBRACK", "COLON", "ASSIGN", "DOT", "COMMA", 
                      "HEX_LITERAL", "BINARY_LITERAL", "OCTAL_LITERAL", 
                      "FLOAT_LITERAL", "DECIMAL_LITERAL", "BYTE_LITERAL", 
                      "U8_STRING_LITERAL", "U_STRING_LITERAL", "U_STRING_LITERAL_CAP", 
                      "L_STRING_LITERAL_CAP", "IDENTIFIER", "STRING_LITERAL", 
                      "CHAR_LITERAL", "CPP_DIRECTIVE", "LINE_COMMENT", "WHITESPACE", 
                      "NEWLINE", "AT_END", "CPP_BODY" ]

    RULE_typeSpecifier = 0
    RULE_baseType = 1
    RULE_typeList = 2
    RULE_variableDeclaration = 3
    RULE_templateArgument = 4
    RULE_qualifiedIdentifier = 5
    RULE_namespaceStatement = 6
    RULE_program = 7
    RULE_topLevelImport = 8
    RULE_topLevelStatement = 9
    RULE_forwardDeclaration = 10
    RULE_accessModifier = 11
    RULE_endNamespaceStatement = 12
    RULE_initSignature = 13
    RULE_deinitSignature = 14
    RULE_classBodyStatement = 15
    RULE_classDefinition = 16
    RULE_implementationBlock = 17
    RULE_structDefinition = 18
    RULE_structBodyStatement = 19
    RULE_enumDefinition = 20
    RULE_enumBody = 21
    RULE_enumItem = 22
    RULE_functionSignature = 23
    RULE_methodDefinition = 24
    RULE_initDefinition = 25
    RULE_deinitBlock = 26
    RULE_includeHeaderContent = 27
    RULE_importDirective = 28
    RULE_usingAlias = 29
    RULE_functionDefinition = 30
    RULE_parameters = 31
    RULE_parameter = 32
    RULE_cppBlock = 33
    RULE_returnStatement = 34
    RULE_assignmentOperator = 35
    RULE_assignment = 36
    RULE_assignableExpression = 37
    RULE_assignablePrimary = 38
    RULE_ifStatement = 39
    RULE_ifBlock = 40
    RULE_elseBlock = 41
    RULE_whileStatement = 42
    RULE_statement = 43
    RULE_blockStatement = 44
    RULE_caseBlock = 45
    RULE_defaultBlock = 46
    RULE_switchStatement = 47
    RULE_deleteStatement = 48
    RULE_forStatement = 49
    RULE_forInit = 50
    RULE_forIncrement = 51
    RULE_methodSignature = 52
    RULE_interfaceDefinition = 53
    RULE_variableDeclaration_no_semicolon = 54
    RULE_assignment_no_semicolon = 55
    RULE_baseInitializer = 56
    RULE_expression = 57
    RULE_unaryExpression = 58
    RULE_simpleExpression = 59
    RULE_primary = 60
    RULE_initializerList = 61
    RULE_functionCallExpression = 62
    RULE_expressionList = 63
    RULE_literal = 64

    ruleNames =  [ "typeSpecifier", "baseType", "typeList", "variableDeclaration", 
                   "templateArgument", "qualifiedIdentifier", "namespaceStatement", 
                   "program", "topLevelImport", "topLevelStatement", "forwardDeclaration", 
                   "accessModifier", "endNamespaceStatement", "initSignature", 
                   "deinitSignature", "classBodyStatement", "classDefinition", 
                   "implementationBlock", "structDefinition", "structBodyStatement", 
                   "enumDefinition", "enumBody", "enumItem", "functionSignature", 
                   "methodDefinition", "initDefinition", "deinitBlock", 
                   "includeHeaderContent", "importDirective", "usingAlias", 
                   "functionDefinition", "parameters", "parameter", "cppBlock", 
                   "returnStatement", "assignmentOperator", "assignment", 
                   "assignableExpression", "assignablePrimary", "ifStatement", 
                   "ifBlock", "elseBlock", "whileStatement", "statement", 
                   "blockStatement", "caseBlock", "defaultBlock", "switchStatement", 
                   "deleteStatement", "forStatement", "forInit", "forIncrement", 
                   "methodSignature", "interfaceDefinition", "variableDeclaration_no_semicolon", 
                   "assignment_no_semicolon", "baseInitializer", "expression", 
                   "unaryExpression", "simpleExpression", "primary", "initializerList", 
                   "functionCallExpression", "expressionList", "literal" ]

    EOF = Token.EOF
    IMPORT=1
    FUNC=2
    VAR=3
    CONST=4
    RETURN=5
    CLASS=6
    IMPLEMENT=7
    STRUCT=8
    ENUM=9
    INIT=10
    DEINIT=11
    THIS=12
    STATIC=13
    IF=14
    ELSE=15
    WHILE=16
    FOR=17
    PUBLIC=18
    INTERFACE=19
    IMPL=20
    VIRTUAL=21
    OVERRIDE=22
    AS=23
    USING=24
    NAMESPACE=25
    END_NAMESPACE=26
    EXTERN=27
    SWITCH=28
    CASE=29
    DEFAULT=30
    TYPE=31
    UNIQUE_KW=32
    SHARED_KW=33
    WEAK_KW=34
    AT_MAKE_UNIQUE=35
    AT_MAKE_SHARED=36
    AT_MOVE=37
    AT_UNSAFE_MOVE=38
    STATIC_CAST=39
    REINTERPRET_CAST=40
    CONST_CAST=41
    BOOL_LITERAL=42
    NEW=43
    DELETE=44
    AT_CPP=45
    EQ=46
    NEQ=47
    LTE=48
    GTE=49
    COLON_COLON=50
    ARROW=51
    AND_OP=52
    OR_OP=53
    LSHIFT=54
    RSHIFT=55
    PLUS=56
    MINUS=57
    STAR=58
    SLASH=59
    MODULO=60
    PLUS_ASSIGN=61
    MINUS_ASSIGN=62
    STAR_ASSIGN=63
    SLASH_ASSIGN=64
    MOD_ASSIGN=65
    LT=66
    GT=67
    NOT_OP=68
    BIT_AND=69
    BIT_OR=70
    BIT_XOR=71
    BIT_NOT=72
    SEMIC_TOKEN=73
    LPAREN=74
    RPAREN=75
    LBRACE=76
    RBRACE=77
    LBRACK=78
    RBRACK=79
    COLON=80
    ASSIGN=81
    DOT=82
    COMMA=83
    HEX_LITERAL=84
    BINARY_LITERAL=85
    OCTAL_LITERAL=86
    FLOAT_LITERAL=87
    DECIMAL_LITERAL=88
    BYTE_LITERAL=89
    U8_STRING_LITERAL=90
    U_STRING_LITERAL=91
    U_STRING_LITERAL_CAP=92
    L_STRING_LITERAL_CAP=93
    IDENTIFIER=94
    STRING_LITERAL=95
    CHAR_LITERAL=96
    CPP_DIRECTIVE=97
    LINE_COMMENT=98
    WHITESPACE=99
    NEWLINE=100
    AT_END=101
    CPP_BODY=102

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TypeSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.params = None # TypeListContext
            self.returnType = None # TypeSpecifierContext
            self.nested = None # TypeSpecifierContext

        def LBRACK(self):
            return self.getToken(ChronoParser.LBRACK, 0)

        def typeSpecifier(self):
            return self.getTypedRuleContext(ChronoParser.TypeSpecifierContext,0)


        def SEMIC_TOKEN(self):
            return self.getToken(ChronoParser.SEMIC_TOKEN, 0)

        def expression(self):
            return self.getTypedRuleContext(ChronoParser.ExpressionContext,0)


        def RBRACK(self):
            return self.getToken(ChronoParser.RBRACK, 0)

        def STAR(self, i:int=None):
            if i is None:
                return self.getTokens(ChronoParser.STAR)
            else:
                return self.getToken(ChronoParser.STAR, i)

        def BIT_AND(self, i:int=None):
            if i is None:
                return self.getTokens(ChronoParser.BIT_AND)
            else:
                return self.getToken(ChronoParser.BIT_AND, i)

        def baseType(self):
            return self.getTypedRuleContext(ChronoParser.BaseTypeContext,0)


        def LT(self):
            return self.getToken(ChronoParser.LT, 0)

        def typeList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChronoParser.TypeListContext)
            else:
                return self.getTypedRuleContext(ChronoParser.TypeListContext,i)


        def GT(self):
            return self.getToken(ChronoParser.GT, 0)

        def LPAREN(self):
            return self.getToken(ChronoParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ChronoParser.RPAREN, 0)

        def ARROW(self):
            return self.getToken(ChronoParser.ARROW, 0)

        def getRuleIndex(self):
            return ChronoParser.RULE_typeSpecifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeSpecifier" ):
                listener.enterTypeSpecifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeSpecifier" ):
                listener.exitTypeSpecifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeSpecifier" ):
                return visitor.visitTypeSpecifier(self)
            else:
                return visitor.visitChildren(self)




    def typeSpecifier(self):

        localctx = ChronoParser.TypeSpecifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_typeSpecifier)
        self._la = 0 # Token type
        try:
            self.state = 180
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [78]:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.match(ChronoParser.LBRACK)
                self.state = 131
                self.typeSpecifier()
                self.state = 132
                self.match(ChronoParser.SEMIC_TOKEN)
                self.state = 133
                self.expression()
                self.state = 134
                self.match(ChronoParser.RBRACK)
                self.state = 139
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 136
                        _la = self._input.LA(1)
                        if not(_la==58 or _la==69):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume() 
                    self.state = 141
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

                pass
            elif token in [32, 33, 34, 94]:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.baseType()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==66:
                    self.state = 143
                    self.match(ChronoParser.LT)
                    self.state = 144
                    self.typeList()
                    self.state = 145
                    self.match(ChronoParser.GT)


                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==74:
                    self.state = 149
                    self.match(ChronoParser.LPAREN)
                    self.state = 151
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4428111282176) != 0) or ((((_la - 74)) & ~0x3f) == 0 and ((1 << (_la - 74)) & 8387601) != 0):
                        self.state = 150
                        self.typeList()


                    self.state = 153
                    self.match(ChronoParser.RPAREN)


                self.state = 159
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 156
                        _la = self._input.LA(1)
                        if not(_la==58 or _la==69):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume() 
                    self.state = 161
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                pass
            elif token in [74]:
                self.enterOuterAlt(localctx, 3)
                self.state = 162
                self.match(ChronoParser.LPAREN)
                self.state = 172
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 164
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4428111282176) != 0) or ((((_la - 74)) & ~0x3f) == 0 and ((1 << (_la - 74)) & 8387601) != 0):
                        self.state = 163
                        localctx.params = self.typeList()


                    self.state = 166
                    self.match(ChronoParser.RPAREN)
                    self.state = 167
                    self.match(ChronoParser.ARROW)
                    self.state = 168
                    localctx.returnType = self.typeSpecifier()
                    pass

                elif la_ == 2:
                    self.state = 169
                    localctx.nested = self.typeSpecifier()
                    self.state = 170
                    self.match(ChronoParser.RPAREN)
                    pass


                self.state = 177
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 174
                        _la = self._input.LA(1)
                        if not(_la==58 or _la==69):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume() 
                    self.state = 179
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNIQUE_KW(self):
            return self.getToken(ChronoParser.UNIQUE_KW, 0)

        def SHARED_KW(self):
            return self.getToken(ChronoParser.SHARED_KW, 0)

        def WEAK_KW(self):
            return self.getToken(ChronoParser.WEAK_KW, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(ChronoParser.IDENTIFIER)
            else:
                return self.getToken(ChronoParser.IDENTIFIER, i)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(ChronoParser.DOT)
            else:
                return self.getToken(ChronoParser.DOT, i)

        def COLON_COLON(self, i:int=None):
            if i is None:
                return self.getTokens(ChronoParser.COLON_COLON)
            else:
                return self.getToken(ChronoParser.COLON_COLON, i)

        def getRuleIndex(self):
            return ChronoParser.RULE_baseType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBaseType" ):
                listener.enterBaseType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBaseType" ):
                listener.exitBaseType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBaseType" ):
                return visitor.visitBaseType(self)
            else:
                return visitor.visitChildren(self)




    def baseType(self):

        localctx = ChronoParser.BaseTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_baseType)
        self._la = 0 # Token type
        try:
            self.state = 193
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 182
                self.match(ChronoParser.UNIQUE_KW)
                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 2)
                self.state = 183
                self.match(ChronoParser.SHARED_KW)
                pass
            elif token in [34]:
                self.enterOuterAlt(localctx, 3)
                self.state = 184
                self.match(ChronoParser.WEAK_KW)
                pass
            elif token in [94]:
                self.enterOuterAlt(localctx, 4)
                self.state = 185
                self.match(ChronoParser.IDENTIFIER)
                self.state = 190
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==50 or _la==82:
                    self.state = 186
                    _la = self._input.LA(1)
                    if not(_la==50 or _la==82):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 187
                    self.match(ChronoParser.IDENTIFIER)
                    self.state = 192
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def templateArgument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChronoParser.TemplateArgumentContext)
            else:
                return self.getTypedRuleContext(ChronoParser.TemplateArgumentContext,i)

